feat: add magazine query
